finally fixed the collapsed navbar bug :)

--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -135,7 +135,7 @@
             height:4rem;
             width:4rem;
             border-radius: 50%;
-            position:fixed;
+            position: absolute;
             top: 3.8rem;
             right: 4.5rem;
             background-image: radial-gradient($primary-color, $primary-color-light );
